# Flask-Vending-Machine

./: .gitignore  README.md  app_context.py  config.py  cred.yaml  docker-compose.yml  docker_setup.sh  entry_points.py  init_schema.py  main.py  openapi_apis.yaml  pyproject.toml  reset_db.py  run.py  sonar-project.properties  tox.ini
.github/workflows/: build.yml
app/: __init__.py  extensions.py
app/main/: __init__.py  routes.py
app/models/: product.py  vending_machine.py  vending_machine_record.py  vending_machine_stock.py
app/product/: __init__.py  routes.py
app/utils/: common.py  log.py  result.py
app/vending_machine/: __init__.py  routes.py
static/: apidocs.yaml
tests/: conftest.py  docker-compose.yml  test_app_reset.py  test_log.py  test_machine_route.py  test_machine_stock.py  test_main_route.py  test_product_route.py  test_sample.py  test_utils_common.py  test_vending_machine.py
tests/fixtures/: machine_tester.py  product_tester.py  tester.py
