[tool.poetry]
name = "vending"
version = "0.1.0"
description = "Basic vending machine backend"
authors = ["Appy <106456906+TheGreatWaves@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
pytest = "^7.2.1"
pre-commit = "^3.0.1"
pymysql = "^1.0.2"
mysqlclient = "^2.1.1"
pytest-cov = "^4.0.0"
flask-wtf = "^1.1.1"

[tool.poetry.group.dev.dependencies]
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
